; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_ether_if_module.c_ether_add_proto.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_ether_if_module.c_ether_add_proto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet_demux_desc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ether_add_proto(i32 %0, i32 %1, %struct.ifnet_demux_desc* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.ifnet_demux_desc*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store %struct.ifnet_demux_desc* %2, %struct.ifnet_demux_desc** %7, align 8
  store i64 %3, i64* %8, align 8
  store i32 0, i32* %9, align 4
  store i64 0, i64* %10, align 8
  br label %11

11:                                               ; preds = %29, %4
  %12 = load i64, i64* %10, align 8
  %13 = load i64, i64* %8, align 8
  %14 = icmp ult i64 %12, %13
  br i1 %14, label %15, label %32

15:                                               ; preds = %11
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.ifnet_demux_desc*, %struct.ifnet_demux_desc** %7, align 8
  %19 = load i64, i64* %10, align 8
  %20 = getelementptr inbounds %struct.ifnet_demux_desc, %struct.ifnet_demux_desc* %18, i64 %19
  %21 = call i32 @ether_add_proto_internal(i32 %16, i32 %17, %struct.ifnet_demux_desc* %20)
  store i32 %21, i32* %9, align 4
  %22 = load i32, i32* %9, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %15
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @ether_del_proto(i32 %25, i32 %26)
  br label %32

28:                                               ; preds = %15
  br label %29

29:                                               ; preds = %28
  %30 = load i64, i64* %10, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %10, align 8
  br label %11

32:                                               ; preds = %24, %11
  %33 = load i32, i32* %9, align 4
  ret i32 %33
}

declare dso_local i32 @ether_add_proto_internal(i32, i32, %struct.ifnet_demux_desc*) #1

declare dso_local i32 @ether_del_proto(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
